--- a/conf/application.conf
+++ b/conf/application.conf
@@ -9,7 +9,7 @@ application.secret="F7G76GDmo2fxs3D;nQ/g>9Q/ZY6>lf5c=2Ad6]WbV?PrGdpi4Ak`Wq1K8jW5
 
 # The application languages
 # ~~~~~
-application.langs="en"
+application.langs="ja"
 
 # Global object class
 # ~~~~~
@@ -67,3 +67,14 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+#H2
+#db.default.driver=org.h2.Driver
+#db.default.url="jdbc:h2:mem:play"
+#ebean.default="models.*"
+
+#MySQLの設定
+#db.default.driver=com.mysql.jdbc.Driver
+#db.default.url="jdbc:mysql://ホスト名:ポート番号/データベース名"
+#db.default.user=利用者名
+#db.default.password=パスワード
+#ebean.default="models.*"
