--- a/conf/application.conf
+++ b/conf/application.conf
@@ -68,13 +68,14 @@ logger.play=INFO
 logger.application=DEBUG
 
 #H2
-db.default.driver=org.h2.Driver
-db.default.url="jdbc:h2:mem:play"
-ebean.default="models.*"
+#db.default.driver=org.h2.Driver
+#db.default.url="jdbc:h2:mem:play"
+#ebean.default="models.*"
 
 #MySQLの設定
-#db.default.driver=com.mysql.jdbc.Driver
-#db.default.url="jdbc:mysql://ホスト名:ポート番号/データベース名"
-#db.default.user=利用者名
-#db.default.password=パスワード
-#ebean.default="models.*"
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://localhost/test"
+db.default.user=root
+db.default.password="root"
+ebean.default="models.*"
+jpagen.mode=MYSQL
